Minutes and websiteDesign

--- a/report/text/ArduinoDesign.tex
+++ b/report/text/ArduinoDesign.tex
@@ -8,7 +8,7 @@ There is two devises need to activete a usage of device from the user to the ser
 
 \begin{figure}[h]
 	\centering
-		\includegraphics[width=1.00\textwidth]{C:/Users/JML88/Documents/GitHub/MOM/report/images/Power&Tagdevice.png}
+		\includegraphics[width=1.00\textwidth]{images/Power&Tagdevice.png}
 	\caption{Rich picture for Powercontrol and Tag reader}
 	\label{fig:Power&Tagdevice}
 \end{figure}
