--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -11,7 +11,7 @@ The second use pattern is pictured in the upper left corner of the figure. It is
 
 \begin{figure}
 	\centering
-		\includegraphics[width=1.00\textwidth]{images/systemoverview.jpg}
+		\includegraphics[width=1.00\textwidth]{images/systemoverview2.png}
 	\caption{system overview}
 	\label{fig:systemoverview}
 \end{figure}
