--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -8,7 +8,7 @@ As mentioned in the overview, see subsection \vref{subsection:momswebsite}, we k
 These requirements made the basis for deciding what pages should be created and what each page's functionality should be. During the designing of the website we aimed to fit all relevant information into each page.\\
 All pages was first designed on the blackboards, where we would discover inconsistencies, new navigation paths and learn about how concepts such as rules should be implemented.\\
 Next is a short overview of what pages were designed and their purposes.\\
-
+\\
 \textbf{Dashboard} is used to get a quick overview of relevant data. The overview is customizable so that each parent can decide what information is most relevant for them.\\
 \\
 \textbf{Devices} is used to get an overview of what controllers and tags is registered with one's MOM system. It also is the only way to navigate to the Add Tag/Controller and Details Tag/Controller pages.\\
@@ -45,8 +45,18 @@ It also serves to provide a shortcut to create rules, from other calendars. For 
 Every page have been explained and in the next section the navigation is explained.
 %Navigation
 \subsection{Navigation}
-When the user has logged in, they are navigated to the dashboard. From here and every other page they can navigate to the main pages: Dashboard, Devices, Users, Permissions, Rules, Chores, Graf and Calendar.\\
+When the user has logged in, they are navigated to the dashboard. From here and every other page they can navigate to the main pages: Dashboard, Devices, Users, Permissions, Rules, Chores, Graf and Calendar, see figure \ref{fig:navigationOfWebsite}.\\
 We decided to keep our navigation as simple as possible. In the design there is 5 head menus, Dashboard, Devices, Users, Graf and Calendar. Meaning Permissions, Rules and Chores are sub-menus and these are all listed under Users.\\
+
+
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{images/navigationOfWebsite.png}
+	\caption{Website Navigation}
+	\label{fig:navigationOfWebsite}
+\end{figure}
+
+
 We also designed the system such that no other menu or functionality is any more than 2 clicks away, every add or detail function can be accessed directly from one of the head menus.\\
 
 \subsection{Color Scheme and Layout Design}
@@ -76,7 +86,7 @@ Under the page Devices, the overview of tags and controllers can be seen. But th
 	\label{fig:tagOverview}
 \end{figure}
 
-This is done by pressing the checkbox in the left side of the tags overview, see figure \ref{fig:tagOverview}. When this is pressed it activates an AJAX call that makes a http request to the PHP page \texttt{setActiveTag.php}. That PHP page then makes a query to the database in order to set the \texttt{active} status of a tag in the system, see figure \ref{fig:flowChartTagActivity}. Resulting in the user no longer being able to use said tag.
+This is done by pressing the checkbox in the left side of the tags overview, see figure \ref{fig:tagOverview}. When this is pressed it activates an AJAX call that makes a http request to the PHP page \texttt{setActiveTag.php}. That PHP page then makes a query to the database in order to set the \texttt{active} status of a tag in the system, see figure \ref{fig:flowChartTagActivity}. Resulting in the user no longer being able to use said tag. If it is pressed again the opposite happens and the user can again use said tag.
 
 
 \begin{figure}[htbp]
