Lav rapporten mere Internet of things
internet of things

internet of things

--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -34,7 +34,7 @@ This lead us to an idea that consists of the following features:
 \end{enumerate}
 
 After we had figured out what the key features of the system was, we started brainstorming how to implement them.\\
-To satisfy feature 1. and 2. we quickly decided to make an administration web-site, this was mainly due to the semester demands of building anything web related. Among other solutions could have been a desktop- or phone application.\\
+Feature 1. and 2. would include many objects and condistions that all is accessible for the adminstrator of housesystem. The userinterface will therefore be large and complex to manage. A computers with it's screen, mouse and keyboard will help with the overveiw of the adminstration interface and help easy make changes. Making the adminstration online would also help with make the system more mobile for parents to change setting or moniter there children at work or at vacation. Among other solutions could have been a desktop- or phone application.\\
 \\
 For feature 3. we came up with a few different solutions. One solution was to write code for a bunch of medias, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator that we intended the usage of our idea on.\\
 We therefore decided that it would be better to create a device that could turn the power on and off from a media instead. We are aware that this solution might influence some media in a bad way, but most media today is setup to handle a sudden disappearance of power.\\
