updated design concepts

--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -47,7 +47,14 @@ note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
   title =        {Objekt Orienteret Analyse \& Design},
   publisher =    {Marko ApS},
   year =         {2001},
-  edition =      {3th edition}
+  edition =      {3rd edition}
+}
+@Book{CoPL,
+  author =       {Robert W. Sebesta},
+  title =        {Concepts of Programming Language},
+  publisher =    {Pearson},
+  year =         {2010},
+  edition =      {9th edition}
 }
 
 @Book{DatabaseKilde,
