--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -102,7 +102,7 @@ Now that all subsystem of the Media-Online Management have been presented the ov
 
 \begin{figure}
 	\centering
-		\includegraphics[width=1.00\textwidth]{images/serveroverview.jpg}
+		\includegraphics[width=1.25\textwidth,  angle=90]{images/serveroverview.jpg}
 	\caption{system architecture}
 	\label{fig:serveroverview}
 \end{figure}
