Updated Analysis, added preface, added idea for future work, re-added hardware.

--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -90,3 +90,11 @@ year = {December 2013},
 note ={\url{http://startbootstrap.com/sb-admin}}
 }
 
+@MISC{internetOfThings,
+author = {Wikipedia},
+title = {Internet Of Things},
+howpublished = {Website},
+year = {December 2013},
+note ={\url{http://en.wikipedia.org/wiki/Internet_of_Things}}
+}
+
