--- a/report/draft.tex
+++ b/report/draft.tex
@@ -41,6 +41,7 @@
 	
 	% Part Solution
 	\part{Solution}
+	\input{text/hardware2.tex}
 	\input{text/systemOverviewDesign.tex}
 	\input{text/database.tex}
 	\input{text/api.tex}
@@ -49,7 +50,7 @@
 
 	%Part Perspective
 	\part{Perspective}
-	
+	\input{text/futureWork.tex}
 	
 	\bibliographystyle{plain}
 	\bibliography{kilder}
