--- a/report/layout/preface.tex
+++ b/report/layout/preface.tex
@@ -1,12 +1,12 @@
 \chapter*{Preface}
 \label{chap:preface}
-Preface goes here...
-%This report is written by four students from the Department of Computer Science at Aalborg University, and is a part of the multi project GIRAF. The four students are studying as Software Engineers at their 6th semester.\\
-%\\
-%This report both serves as a documentation of the project process as well as documentation of how the system works.\\
-%\\
-%Included with this report, there is a CD containing the project's Git repository. Which contains the report, source code of the system as well as the graphic assets used in the project.\\
-%\\
-%The group would like to personally thank:\\
+%Preface goes here...
+This report is written by six students from the Department of Computer Science at Aalborg University, and is a project under the subject ''Internet of Things''. The four students are studying as Software Engineers at their 7th semester.\\
+\\
+This report serves as a suggestion of how to moderate children's increasing use of media.\\
+\\
+Included with this report, there is a CD containing the project's Git repository. Which contains the report, source code of the system as well as the graphic assets used in the project.\\
+\\
+The group would like to personally thank:\\
 %Ulrik Nyman for great input and support during the project.\\
 %Mette Als for her patience and valuable input into the designing of the system.\\
